# simple-social-network

./: .gitignore  README.md  samconfig.toml  template.yaml
api_fn/: Cargo.toml
api_fn/src/: db.rs  error.rs  main.rs  model.rs
